main - add test case